--- a/ECON762_Assignment4.Rmd
+++ b/ECON762_Assignment4.Rmd
@@ -70,7 +70,19 @@ MAD_n = \frac{Med | x_i - Med(x_i)|}{0.675}
 
 We center all of the data points in a sample and center them about the medium of the sample. By finding the medium and dividing by 0.675, if our data sample is drawn from a Guassian distribution, $MAD_n$ will equal the standard deviation of the distribution. Where the interquartile range is based on the rank order of the sample, $MAD_n$ is based around the deviation around the median. This allows for the scale to be robust against injections of bad data and has a breakdown point of 50%.
 
-c) 
+c) Rousseeuq and Croux's $Q_n$ is based on distance similar to interquartile range. It is a more efficient robust scale estimator than $MAD_n$, which suffers a drawback of discountinity with it's influence function. If we look at the location framework for the sample median we see that it will suffer from this same discountinuity:
+\begin{align*}
+median {|x_i-x_j|;i<j}
+\end{align*}
+
+This will have a desired breakdownpoint of 50% but still suffers from inefficiency.$Q_n$ is a more efficient estimator of scale than the location framework produces while still have a 50% breakdown point: 
+
+\begin{align*}
+Q_n = d {|x_i-x_j|;i<j}_{(k)}
+\end{align*}
+
+Where $d$ is a constant factor and $k$ denotes the $k$th order statistic. 
+
 ###Question 3
 
 a)
@@ -165,6 +177,8 @@ plot(x0.seq,vec.mad,type="l")
 plot(x0.seq,vec.q,type="l")
 ```
 
+The median, interquartile range, $MAD_n$ and $Q_n$ appear to the be bounded.
+
 c)
 
 ```{r}
@@ -205,6 +219,8 @@ colnames(values)<-c("M","Mean","Median","Standard Deviation","IQR","MAD","Q")
 knitr::kable(values)
 ```
 
+From looking at the table, the non-robust method values are much more sensitive to influence by the mass points. We can also see from the table, the breakdown points for the estimators with $Q_n$ being the only one to remain robust when influence exerted on half the sample.
+
 d)
 
 ```{r}
@@ -226,6 +242,8 @@ for (i in 1:5){
 
 ```
 
+We can see that the non-robust three-sigma edit rule results in the value -2.656 being masked when compared to the robust method. Once we start increasing the number of point mass values in the sample, all of the point masses are masked when using the non-robust method for $m\ge2$. We can see that the non-robust method will resulting in masking as we inject bad data values into the sample. 
+
 ###Question 5
 
 a) A box and whisker plot is a method that defines what points would be considered outliers and displays the median, interquartile range, the boundary for outliers and the outliers themselves. It defines 
@@ -239,7 +257,26 @@ boxplot(x)
 
 The thick line is the median of the distribution while the top and bottom of the "box" are quartiles $Q_1$ and $Q_1$. The "whiskers" are the farthest points that are not outliers. Here they are defined as values within $(3/2)\times Q$. The points are data values that lie outside of the whiskers and values that are the same would be placed next to each other horizontally. 
 
-b) 
+b) The advantage for using a box and whisker plot is that it is a robust measurement of scale as it relies on the median values of the sample. Large data values that are
+
+c) 
+
+```{r}
+set.seed(42)
+require(robustbase)
+n <- 20
+x<-rnorm(n)
+
+x0<-1000
+bp<-boxplot(x)
+print(bp$out)
+
+for (i in 1:5){
+  x[1:i]<-x0
+  bp<-boxplot(x)
+  print(bp$out)
+}
+```
 
 ###Question 6
 
@@ -292,7 +329,7 @@ Therefore, $0 \le h_{ii} \le 1$.
 b) We know that $X'X = \sum^n_{i=1}x_ix_i'$ and that $X_{(-t)}X'_{-t}$ subtracts the $t^{th}$ observation from $X'X$ matrix. Therefore:
 
 \begin{align*}
-X'_{(-t)}X_({-t}) = X'X - x_tx'_t\\
+X'_{(-t)}X_{(-t)} = X'X - x_tx'_t\\
 \end{align*}
 
 The Sherman-Morrison-Woodbury formula states $(A-UV')^{-1}=A^{-1}+A^{-1}U\left(I_m-V'A^{-1}U\right)^{-1}V'A^{-1}$ where $A$ is a $p \times p$ matrix and $U$ and $V$ are $p \times m$ matricies. From our equation above, we can state that $A = X'X$ and $U,V=x_t$ where m=1. We can use the Sherman-Morrison-Woodbury formula to solve for inverse of our equation:
@@ -305,14 +342,40 @@ The Sherman-Morrison-Woodbury formula states $(A-UV')^{-1}=A^{-1}+A^{-1}U\left(I
 We know that $h_{ii}=x_i'(X'X)^{-1}x_i$.
 
 \begin{align*}
-(X_{(-t)}X'_{(-t)})^{-1} &= \frac{(X'X)^{-1} + (X'X)^{-1}x_tx'_t(X'X)^{-1}}{(1 -h_{tt})}\\
+(X_{(-t)}X'_{(-t)})^{-1} &= (X'X)^{-1}+\frac{(X'X)^{-1}x_tx'_t(X'X)^{-1}}{(1 -h_{tt})}\\
 \end{align*}
 
-c) Similarily, $X'Y = \sum^n_{i=1}x_iy'_i$. We can find $X'_{(-t)}Y_{(-t)}$ by subtracting the $t^{th}$ observation $x_ty'_t$:
+c) Similarily, $X'Y = \sum^n_{i=1}x'_iy_i$. We can find $X'_{(-t)}Y_{(-t)}$ by subtracting the $t^{th}$ observation $x_ty'_t$:
 
 \begin{align*}
-X'_{(-t)}Y_({-t}) = X'Y - x_ty'_t\\
+X'_{(-t)}Y_{(-t)} = X'Y - x'_ty_t\\
 \end{align*}
 
-###Question 7
 
+d) Using the formula for OLS, we can estimate coefficients for data missing an observation
+
+\begin{align*}
+\hat\beta_{(-t)} = (X'_{(-t)}X_({-t}))^{-1}X'_{(-t)}Y_{(-t)}\\
+\end{align*}
+
+We can replace the elements with the values we previously determined.
+
+\begin{align*}
+\hat\beta_{(-t)} &= \bigg((X'X)^{-1}+\frac{(X'X)^{-1}x_tx'_t(X'X)^{-1}}{(1 -h_{tt})}\bigg)(X'Y - x'_ty_t)\\
+&= (X'X)^{-1}X'Y + \frac{(X'X)^{-1}x_tx'_t(X'X)^{-1}}{(1 -h_{tt})}X'Y -(X'X)^{-1}x_ty_t-\frac{(X'X)^{-1}x_tx'_t(X'X)^{-1}}{(1 -h_{tt})}x_ty_t\\
+\end{align*}
+
+We know that $h_{ii}=x_i'(X'X)^{-1}x_i$ so we can simplify our expression.
+
+\begin{align*}
+&= \hat\beta + \frac{(X'X)^{-1}x_tx'_t\hat\beta}{(1 -h_{tt})} -\frac{(1-h_{tt})(X'X)^{-1}x_ty_t}{(1-h_{tt})}-\frac{(X'X)^{-1}x_th_{tt}y_t}{(1 -h_{tt})}\\
+\end{align*}
+
+The fitted values of an observation can be placed into equation ($\hat y = x'_t\hat\beta$) and we factor our common terms:
+
+\begin{align*}
+&= \hat\beta + \frac{(X'X)^{-1}x_t}{(1 -h_{tt})}(\hat y_t - (1-h_{tt})y_t - h_{tt}y_t)\\
+&= \hat\beta + \frac{(X'X)^{-1}x_t}{(1 -h_{tt})}(\hat y_t - y_t)\\
+\hat \beta_{(-t)}&= \hat\beta + \frac{(X'X)^{-1}x_t\hat \epsilon_t}{(1 -h_{tt})}\\
+\hat \beta_{(-t)} &-\hat\beta = \frac{(X'X)^{-1}x_t\hat \epsilon_t}{(1 -h_{tt})}\\
+\end{align*}
